Bug 375565 - Specifying a length TagMatch bias has no effect
Summary: Specifying a length TagMatch bias has no effect
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Dynamic Playlists (other bugs)
Version First Reported In: 2.9.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-25 20:17 UTC by Jamie Smith
Modified: 2024-05-06 15:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jamie Smith 2017-01-25 20:17:15 UTC
Despite adding a TagMatch filter to skip short songs, such songs still appear in the playlist.
Comment 1 Serhiy 2017-08-04 10:36:50 UTC
Confirming.

Version 2.8.0
Using KDE 4.14.22
Kubuntu 16.04
Comment 2 Serhiy 2018-10-11 20:02:55 UTC
Steps to reproduce:
1. Create a new dynamic playlist.
2. Add Bias "Match meta tag", select tag Length, greater than, put value that only a couple of records should match.

Expected result:
Only a couple of songs longer than limit appear.

Current behaviour:
All records appear.
Comment 3 Tuomas Nurmi 2024-04-09 19:54:04 UTC
Had a look at this. The chosen length in TagMatch is interpreted as milliseconds instead of seconds, causing the lengths to be 1/1000th of the desired ones. I'll see if I manage to fix this sometime soon.
Comment 4 robert marshall 2024-05-05 14:32:09 UTC
Until this is fixed - thanks Tuomas for all your work with amarok - I'm fudging this by hand editing ~/.local/share/amarok/dynamic.xml and changing (without amarok running!)    <field>length</field><numValue>6000</numValue> - if 10 minutes to <field>length</field><numValue>6000000</numValue> which seems to work - but making sure I don't attempt to edit the value within amarok.
Comment 5 Bug Janitor Service 2024-05-05 21:51:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/94
Comment 6 Tuomas Nurmi 2024-05-06 15:15:03 UTC
Git commit 04fc4ce57cc1760c975adeddb8870404edce2e09 by Tuomas Nurmi.
Committed on 06/05/2024 at 15:14.
Pushed by nurmi into branch 'master'.

Fix TagMatchBias to interpret length as seconds

M  +1    -0    ChangeLog
M  +12   -3    src/dynamic/biases/TagMatchBias.cpp

https://invent.kde.org/multimedia/amarok/-/commit/04fc4ce57cc1760c975adeddb8870404edce2e09