Fix TagMatchBias to interpret length as seconds

BUG: 375565